# th-chat

./: .gitignore  Cargo.toml  OpenCode.md  README.md  mcp-config-sample.json  mcp-config.json  test.md
change-requests/: th-chat-directory-config.md
src/: app.rs  chat.rs  config.rs  config_manager.rs  directory.rs  lib.rs  main.rs  persistence.rs  session_manager.rs  ui.rs
test-dir/: test-config.json
