[package]
name = "th-chat"
version = "0.1.0"
edition = "2021"
description = "Simple CLI tool to interact with chat-state actor in the Theater runtime"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
uuid = { version = "1.6", features = ["v4"] }
indicatif = "0.17.7"
console = "0.15.7"

# Dependencies for message types
genai-types = { path = "/Users/colinrozzi/work/genai-types" }

# Local dependency on theater
theater = { path = "/Users/colinrozzi/work/theater" }
