[package]
name = "th-chat"
version = "0.1.0"
edition = "2021"
description = "Simple CLI tool to interact with chat-state actor in the Theater runtime"

[lib]
name = "th_chat"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
uuid = { version = "1.6", features = ["v4"] }
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
textwrap = "0.16"
futures = "0.3"
dirs = "5.0"

# Dependencies for message types
genai-types = { path = "/Users/colinrozzi/work/genai-types" }
mcp-protocol = "0.2.0"

# Local dependency on theater
theater = { path = "/Users/colinrozzi/work/theater/crates/theater" }
theater-client = { path = "/Users/colinrozzi/work/theater/crates/theater-client" }
theater-server = { path = "/Users/colinrozzi/work/theater/crates/theater-server" }
